lab1.css
/* GENERAL STYLES START */
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0; 
}

html {
  overflow-y: scroll;
}

body {
    font-family: "Poppins", sans-serif;
    
}



/* HEADER & MAIN NAV START  */

header {
    width: 100%;
    padding: 20px; 
    height: 80px;
    background-color: #11223a; /* https://colorhunt.co/palette/ff65001e3e620b192c000000  */
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center; 
}


#lab1 {
  display: flex;
  align-items: center;
  font-size: 1.1rem;
  margin-left: 10px;
  letter-spacing: 1px;
}

a.current  {
border-bottom: 2px solid orangered; 
color: orangered;
}


.navbar nav.links ul{ 
  font-size: 1.1rem;
  text-transform: uppercase;    
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  flex-wrap: wrap;
  gap: 2rem; 
  margin-right: 1rem; 
}


nav ul li {
  list-style-type: none;
  padding: 5px; 
  letter-spacing: 1px;

}


.navbar nav ul li:hover {
  transform: scale(1.1);
  transition: 0.2s;
}

nav ul li a {
  color: white;
  text-decoration: none;
}

nav ul li a:hover, nav ul li a:focus {
color: orangered; 

}



/* MAIN CONTAINER AND CONTENT */

.site-container {
  margin: 0 auto; 
  /* border: 1px solid red; */
  /* width: 90%; */
  max-width: 1920px;
}


.content-grid-intro{
    width: 100%;
    display: grid;
    justify-items: center;
    align-items: center;    
    height: 100vh;  
}

.content-grid{
  width: 100%;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(3, auto);
} 


.hi {
  color: orangered;
  font-size: 5.5rem;
  font-weight: 900;
  margin-bottom: -10px; 
}


.main-text-intro {
  font-size: 2rem;
  text-align: center;
  max-width: 800px;
  grid-column: 1;
  font-weight: 300;
  margin-left: auto; 
}


 .main-text {
  font-size: 1.2rem;
  text-align: left;
  margin: 50px 0px 0px 200px;
  margin-bottom: 150px;
  grid-column: 1 / 3;
  font-weight: 300;
  max-width: 570px;
}

.main-text > h2, .main-text-form > h2 {
  color: orangered;
  margin-top: 50px;
  margin-bottom: 0px;
  font-size: 1.4rem;
}


.portrait {
  grid-column: 2;
}

.portrait img {
  width: 100%;
  height: auto;
  max-width: 600px;

}



/* SKILL TABLE START */
article.main-text table#skills-table {
  width: 100%;
  border-collapse: collapse;
  margin: 10px 0px auto;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
  background-color: white;
  /* border-radius: 8px; */
  overflow: hidden;
}


th, td {
  padding: 15px;
  text-align: left;
  border-bottom: 1px solid #ddd;
}

th {
  background-color: #11223a;
  color: white;
}

tr:hover {
  background-color: rgba(255, 69, 0, .8);
}

.skill-level {
  height: 20px;
  background-color: orangered;
  border-radius: 10px;
  transition: width 0.4s;
  color: white;
  text-align: center;
  line-height: 20px; /* Vertically center text */
  font-weight: bold;
}




/* SIDEBAR START */

body aside.sidebar {
  background: white;
  border: 3px solid orangered;
  grid-column: 3 / 4;
  margin-top: 50px;
  height: min-content;
  border-radius: 16px;
  position: sticky;
  top: 10px; 
  clip-path: polygon(0 10%,
          10% 0,
          90% 0,
          100% 10%,
          100% 90%,
          90% 100%,
          10% 100%,
          0% 90%,
          0% 10%);
  /* width: 100%; */
  box-sizing: border-box;
  z-index: 2;
  margin-right: 10px; 

}


body aside.sidebar nav {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}


.sidebar h3 {
  font-weight: 500;
  color: orangered;
  margin-top: 10px; 
}

aside.sidebar nav ul {
  width: 90%;
  padding-bottom: 1rem;
  padding-top: .5rem;
  margin-top: 0;
  display: flex;
  text-align: left;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}


aside.sidebar nav li {
  list-style: none;
  font-size: 1.1rem;
  width: 100%;
  padding-bottom: 10px;
  color: black;
}


aside.sidebar nav li::before {
  content: "\00BB";
  margin-right: 5px;
  color: #EB1934;
}

.sidebar nav li a {
  text-decoration: none;
  color: black;
  font-weight: 300;
  transition: all .4s;
}

.sidebar nav li a:hover {
  color: orangered;
}



/* FOOTER START */

footer {
  width: 100%;
  padding: 20px; 
  height: 80px;
  background-color: #11223a; 
  display: flex;
  justify-content: space-between;
  align-items: center;

}


.footer-links ul { 
  font-size: 1rem;
  text-transform: uppercase; 
  display: flex;    
  justify-content: center;
  align-items: center;
  gap: 35px; 
  flex-wrap: wrap; 
}

.insta {
  margin-top: 5px; 
}


small {
  color: white;
  font-size: 1rem;
  margin-left: 10px; 
}




/* CONTACT FORM START */
.main-text-form {
  font-size: 1.2rem;
  text-align: left;
  margin: 50px 0px 0px 0px;
  grid-column: 2 / 3;
  height: calc(100vh - 209px);
}

.main-text-form form {
  margin-top: 25px; 
  margin-bottom: 140px; 
}


.form-group {
  margin-bottom: 15px; 
}

label {
  display: block;
  margin-bottom: 5px;
  font-size: 1.2rem;
}

input[type="text"],
input[type="email"],
textarea {
  width: 100%;
  padding: 10px;
  border: 1px solid #ddd;
  border-radius: 5px;
  font-size: 1.1rem;
}

input[type="text"]:focus,
input[type="email"]:focus,
textarea:focus {
  outline: 1px solid red; 
}

textarea {
  resize: none;
}

.form-actions {
  text-align: center; 
}

button {
  background-color: #11223a; 
  color: white;
  border: none;
  padding: 10px 20px;
  border-radius: 5px;
  cursor: pointer;
  margin: 5px;
  font-size: 1rem;
}

button:hover {
  background-color: orangered; 
}



/* HAMBURGER MENU */
#hamburger-icon {
    margin: auto 0;
    display: none;
    cursor: pointer;
  }
  
  #hamburger-icon div {
    width: 35px;
    height: 3px;
    background-color: white;
    margin: 6px 0;
    transition: 0.4s;
  }
  
  .open .bar1 {
    -webkit-transform: rotate(-45deg) translate(-6px, 6px);
    transform: rotate(-45deg) translate(-6px, 6px);
  }
  
  .open .bar2 {
    opacity: 0;
  }
  
  .open .bar3 {
    -webkit-transform: rotate(45deg) translate(-6px, -8px);
    transform: rotate(45deg) translate(-6px, -8px);
  }
  
  .open .mobile-menu {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    background-color:  #11223a;
    color:white; 
    
  }
  
  .mobile-menu {
    display: none;
    position: absolute;
    top: 80px;
    left: 0;
    height: calc(100vh - 50px);
    width: 100%;
    padding-top: 50px; 
    font-size: 1.1rem;
    z-index: 100;
  }
  
  .mobile-menu li {
    margin-bottom: 1rem;
    list-style: none;
  }
  
  .mobile-menu li a {
    color: white;
    text-decoration: none;
  }



  /* RAINBOW TEXT */

.rainbow-text {
  /* Double percentages to avoid blur (#000 10%, #fff 10%, #fff 20%, ...). */
  background: #CA4246;
  background-color: #CA4246;
  background: conic-gradient(
    #CA4246 16.666%, 
    #E16541 16.666%, 
    #E16541 33.333%, 
    #F18F43 33.333%, 
    #F18F43 50%, 
    #8B9862 50%, 
    #8B9862 66.666%, 
    #476098 66.666%, 
    #476098 83.333%, 
    #A7489B 83.333%);
  background-size: 57%;
  background-repeat: repeat;
  
  /* Use the text as a mask for the background. */
  /* This will show the gradient as a text color rather than element bg. */
  background-clip: text;
  -webkit-text-fill-color: transparent; 
  
  /* Animate the text when loading the element. */
  /* This animates it on page load and when hovering out. */
  animation: rainbow-text-animation-rev 0.5s ease forwards;
  cursor: pointer;
}

/* Add animation on hover. */
.rainbow-text:hover {
  animation: rainbow-text-animation 0.5s ease forwards;
}

/* Move the background and make it larger. */
/* Animation shown when hovering over the text. */
@keyframes rainbow-text-animation {
  0% {
    background-size: 57%;
    background-position: 0 0;
  }
  20% {
    background-size: 57%;
    background-position: 0 1em;
  }
  100% {
    background-size: 300%;
    background-position: -9em 1em;
  }
}

/* Move the background and make it smaller. */
/* Animation shown when entering the page and after the hover animation. */
@keyframes rainbow-text-animation-rev {
  0% {
    background-size: 300%;
    background-position: -9em 1em;
  }
  20% {
    background-size: 57%;
    background-position: 0 1em;
  }
  100% {
    background-size: 57%;
    background-position: 0 0;
  }
}



/* PROJECTS GRID START */

.project-grid {
  display: grid;
  grid-template-areas:
    "alice babyoncouch invasion"
    "castleinthesky boyinthewoods thezeitgeist"
    "redhood dragonwarrior bearcub";
  gap: 5px;
  width: 100%;
  max-width: 1920px;
  margin: 5px auto 100px auto;
}

#alice {
  grid-area: alice;
}
#babyoncouch {
  grid-area: babyoncouch;
}

#invasion {
  grid-area: invasion; 
}

#castleinthesky {
  grid-area: castleinthesky; 
}

#boyinthewoods {
  grid-area: boyinthewoods;
}

#thezeitgeist {
  grid-area: thezeitgeist;
}

#redhood {
  grid-area: redhood;
}

#dragonwarrior {
  grid-area: dragonwarrior;
}
#bearcub {
  grid-area: bearcub;
}

.project {
  position: relative;
}


.project img {
  width: 100%;
  object-fit: cover;
  height: 100%;
}





/* MEDIA QUERIES */

@media only screen and (max-width: 1300px) {
  aside {
    display: none; 
  }

}




  @media only screen and (max-width: 1200px) {
    .project-grid {
      max-width: 100%; 
      grid-template-columns: repeat(2, 50%);
      grid-template-areas:
        "alice babyoncouch"
        "invasion castleinthesky"
        "boyinthewoods thezeitgeist"
        "redhood dragonwarrior"
        "bearcub";   
    }

    .content-grid-intro {
      display: grid;
      grid-template-columns: 100%;
      grid-template-rows: 1fr;
      justify-content: center;
      align-items: center;
      

    }

    article.main-text-intro {
      grid-column: 1/1;
      grid-row: 1 / 2;
      text-align: center;
      margin: 0 auto; 
     
  }

  
  section.portrait {
    grid-column: 1 / 1;
    grid-row: 2 / 2;
}

article.main-text {
  grid-column: 1 / 4;
  font-weight: 300;
  max-width: 90% !important;
  margin: 0 auto 150px auto; 

}

}


@media only screen and (max-width: 920px) {

  .footer-links ul {
    gap: 15px;
    flex-wrap: wrap;
    justify-content: center;
    padding: 0;
  }

  footer {
    flex-direction: column;
    align-items: center;
    text-align: center;
    padding: 0px 0px 8px 0;
  }
  .insta {
   display: none; 
  }

  small {
    margin-top: 10px;
    font-size: 0.9rem;
    margin-left: 0;
  }


}






  @media only screen and (max-width: 770px) {
    .project-grid {
      max-width: 100%; 
      grid-template-columns: 100%; 
      grid-template-areas:
        "alice" "babyoncouch"
        "invasion" "castleinthesky"
        "boyinthewoods" "thezeitgeist"
        "redhood" "dragonwarrior"
        "bearcub";
       
    }
  }

  
  @media only screen and (max-width: 670px) {
    header nav {
      display: none;
    }
  
    #hamburger-icon {
      display: block;
    }

  }
  

